packages/dashboard-frontend/src/pages/WorkspaceDetails/OverviewTab/index.module.css
/*
* Copyright (c) 2018-2025 Red Hat, Inc.
* This program and the accompanying materials are made
* available under the terms of the Eclipse Public License 2.0
* which is available at https://www.eclipse.org/legal/epl-2.0/
*
* SPDX-License-Identifier: EPL-2.0
*
* Contributors:
*   Red Hat, Inc. - initial API and implementation
*/

.editable {
  position: relative;
  top: 2px;
  color: var(--pf-t--global--text--color--link--default);
}

.readonly {
  display: inline-block;
  padding-top: 8px;
}

